# taxi_trajectory_prediction

./: .gitignore  Dockerfile.app  Dockerfile.streamlit  README.md  docker-compose.yml  pyproject.toml
dataset/: valores_unicos.pkl
model/: GradientBoostingRegressor.pkl
notebooks/: taxi.ipynb
src/: handler.py  taxi.py
streamlit/: Home.py  home.py  mapa.py  streamlit.py
streamlit/pages/: 1_Dashboard.py
